# Generative-And-Agentic-AI-Projects

07_openai-guardials/: .env  main.py  pyproject.toml
08_AI_rishta/: main.py  pyproject.toml
08_rishta-app/: .env  PyWhatKit_DB.txt  commitcode.txt  main.py  pyproject.toml
_01_nd-gpt/: main.py  requirements.txt
_02_chainlit-chatbot/: pyproject.toml
_03_nd-ai-blogs/: .env  main.py  pyproject.toml
_04_qa-chatbot/: .env  main.py  pyproject.toml
_05_openai-bot/: main.py  pyproject.toml
_06_writing-bot/: main.py  pyproject.toml
ai-chef-and-cooking-idea/: .env  main.py  pyproject.toml
ai-cooking-idea-and-chef/: .env  pyproject.toml
ai-cooking-idea-and-chef/src/ai_cooking_idea_and_chef/: __init__.py  main.py
chainlit-chatbot/: main.py
customer-service-agent/: main.py  pyproject.toml
inde-translator/: main.py  pyproject.toml  requirements.txt
inde-translator/src/inde_translator/: __init__.py
inventory-agent/: main.py  pyproject.toml
nd-chatbot/: app.py  pyproject.toml
nd-chatbot/src/nd_chatbot/: __init__.py
nd-gpt/: pyproject.toml
nd_translator/: main.py  pyproject.toml
personal-gpt/: gpt.py
rishta_agent/: pyproject.toml
rishta_agent/src/rishta_agent/: main.py
weather-agent/: main.py  pyproject.toml
