[project]
name = "inde-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rayyan Naveed", email = "rayyannaveed33@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
inde-translator = "inde_translator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
