[project]
name = "nd-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rayyan Naveed", email = "rayyannaveed33@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
nd-chatbot = "nd_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
